# bonds

./: .actrc  .gitignore  CNAME  Cargo.toml  Makefile  README.md
.github/: SECURITY.md
.github/workflows/: ci.yml  docs-check.yml  docs-preview.yml  docs-release.yml  publish.yml
.github/workflows/docs/: check.yml  preview.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  main.rs  ui.rs
crates/cli/src/commands/: add.rs  config.rs  info.rs  list.rs  migrate.rs  mod.rs  remove.rs  update.rs
crates/cli/tests/: args_test.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: bond.rs  config.rs  error.rs  lib.rs  manager.rs
crates/core/tests/: bond_lifecycle.rs
docs/: mkdocs.yml  requirements.txt
docs/content/: architecture.md  cli.md  index.md  roadmap.md
docs/content/assets/meta/: site.webmanifest
latest/: 404.html  index.html
latest/api/: CNAME  help.html  settings.html  src-files.js
latest/api/bond/: all.html  fn.main.html  index.html  sidebar-items.js
latest/api/bond/commands/: index.html  sidebar-items.js
latest/api/bond/ui/: constant.DIM.html  constant.GREEN_BOLD.html  constant.MAGENTA.html  constant.RED_BOLD.html  constant.RESET.html  fn.colors_enabled.html  fn.error.html  fn.error_prefix.html  fn.format_error.html  fn.heading.html  fn.key.html  fn.status_bad.html  fn.style_for.html  fn.warning.html  index.html  sidebar-items.js
latest/api/bonds_cli/: index.html  sidebar-items.js
latest/api/bonds_cli/args/: enum.ConfigAction.html  index.html  struct.Cli.html
latest/api/bonds_cli/ui/: fn.format_error.html  fn.heading.html  fn.id.html  fn.info.html  fn.key.html  fn.status_warn.html  fn.success.html  index.html
latest/api/bonds_core/: all.html  index.html
latest/api/bonds_core/bond/: struct.Bond.html
latest/api/bonds_core/config/: index.html  struct.BondsConfig.html
latest/api/bonds_core/error/: enum.BondError.html  enum.ErrorKind.html  index.html
latest/api/bonds_core/manager/: index.html  sidebar-items.js  struct.BondManager.html
latest/api/search.index/: 118b15ae59b7.js  216b5a15bcca.js  3c1427209bab.js  5140f38cd269.js  567e4a4a3bfa.js  59d834612ae4.js  604a1aee0f6e.js  76e61b77ee7c.js  7a1f5cbd77c7.js  7d9aea98d9e0.js  root.js
latest/api/search.index/entry/: 07f00a8f889c.js  94b5f7e9b502.js
latest/api/search.index/function/: 0397297486a0.js
latest/api/search.index/name/: 86002a647bbe.js
latest/api/src/bond/: main.rs.html
latest/roadmap/: index.html
versions/cli-v0.1.0/api/: settings.html
versions/cli-v0.1.1/api/: index.html
versions/v0.1.0/api/: help.html
versions/v0.1.1/api/: index.html
versions/v0.1.3/: sitemap.xml
versions/v0.1.3/api/: crates.js
versions/v0.1.3/architecture/: index.html
versions/v0.1.3/cli/: index.html
versions/v0.1.3/getting-started/: index.html
versions/v0.1.3/search/: search_index.json
(+242 files in other folders)
