# No [package] section -- this is purely a workspace manifest
[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    # "crates/app",  # uncomment later
]

# Share dependency versions across crates
[workspace.dependencies]
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tempfile = "3"