[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"