# crates/core/Cargo.toml
[package]
name = "bonds-core"
version = "0.1.3"
edition = "2024"
description = "Core library for managing symlink-based bonds with SQLite persistence"
license-file = "../../LICENSE"
repository = "https://github.com/clxrityy/bonds"
readme = "README.md"
documentation = "https://bonds.fyi/latest/api/bonds_core/"
keywords = ["symlink", "filesystem", "sqlite", "productivity"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }